--- a/resource/package.json
+++ b/resource/package.json
@@ -1,11 +1,25 @@
 {
     "name": "krusty",
+    "type": "module",
     "scripts": {
         "dev": "vite dev",
         "build": "vite build",
         "preview": "vite preview"
     },
     "dependencies": {
+        "@fontsource-variable/jetbrains-mono": "^5.2.5",
+        "@fontsource/open-sans": "^5.2.5",
+        "@tailwindcss/vite": "^4.0.14",
+        "lucide-vue-next": "^0.482.0",
+        "tailwindcss": "^4.0.14",
+        "vue": "^3.5.13",
+        "vue3-simple-icons": "^13.2.0"
+    },
+    "devDependencies": {
+        "@vitejs/plugin-vue": "^5.2.1",
+        "@vue/tsconfig": "^0.7.0",
+        "typescript": "^5.8.2",
+        "vue-tsc": "^2.2.8",
         "vite": "^6.2.2"
     }
 }
